--- a/so3/so3/configs/rpi4_defconfig
+++ b/so3/so3/configs/rpi4_defconfig
@@ -6,7 +6,7 @@ CONFIG_ARCH_ARM32=y
 # CONFIG_ARCH_ARM64 is not set
 # CONFIG_SO3VIRT is not set
 CONFIG_ARCH="arm32"
-CONFIG_CROSS_COMPILE="arm-none-linux-gnueabihf-"
+CONFIG_CROSS_COMPILE="arm-none-eabi-"
 # CONFIG_ARM_TRUSTZONE is not set
 
 #
@@ -15,7 +15,6 @@ CONFIG_CROSS_COMPILE="arm-none-linux-gnueabihf-"
 CONFIG_KERNEL_VADDR=0xc0000000
 # CONFIG_VEXPRESS is not set
 CONFIG_RPI4=y
-CONFIG_RAM_BASE=0x00000000
 # CONFIG_THREAD_ENV is not set
 CONFIG_PROC_ENV=y
 
@@ -71,7 +70,7 @@ CONFIG_ROOTFS_RAMDEV=y
 #
 CONFIG_IPC_SIGNAL=y
 CONFIG_IPC_PIPE=y
-CONFIG_HEAP_SIZE=2
+CONFIG_HEAP_SIZE=32
 # CONFIG_RTOS is not set
 # CONFIG_AVZ is not set
 # CONFIG_SOO is not set
