--- a/linux/rootfs/configs/virt32_defconfig
+++ b/linux/rootfs/configs/virt32_defconfig
@@ -467,18 +467,18 @@ BR2_TARGET_GENERIC_ISSUE="SOO Agency"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 # BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
 BR2_TARGET_GENERIC_PASSWD_METHOD="sha-256"
-BR2_INIT_BUSYBOX=y
+# BR2_INIT_BUSYBOX is not set
 # BR2_INIT_SYSV is not set
 # BR2_INIT_OPENRC is not set
-# BR2_INIT_SYSTEMD is not set
+BR2_INIT_SYSTEMD=y
 # BR2_INIT_NONE is not set
-# BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
-# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS is not set
-# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
+
+#
+# /dev management using udev (from systemd)
+#
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 # BR2_ROOTFS_DEVICE_TABLE_SUPPORTS_EXTENDED_ATTRIBUTES is not set
-# BR2_ROOTFS_MERGED_USR is not set
+BR2_ROOTFS_MERGED_USR=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
 # BR2_SYSTEM_BIN_SH_BUSYBOX is not set
 BR2_SYSTEM_BIN_SH_BASH=y
@@ -495,7 +495,9 @@ BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C en_US de fr"
 BR2_GENERATE_LOCALE=""
 # BR2_SYSTEM_ENABLE_NLS is not set
-# BR2_TARGET_TZ_INFO is not set
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_TZ_ZONELIST="default"
+BR2_TARGET_LOCALTIME="Etc/UTC"
 BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY="$(BASE_DIR)/board/common/rootfs_overlay/ $(BASE_DIR)/board/virt32/rootfs_overlay/"
 BR2_ROOTFS_PRE_BUILD_SCRIPT=""
@@ -521,9 +523,9 @@ BR2_PACKAGE_BUSYBOX_WATCHDOG=y
 BR2_PACKAGE_BUSYBOX_WATCHDOG_PERIOD="5"
 BR2_PACKAGE_SKELETON=y
 BR2_PACKAGE_HAS_SKELETON=y
-BR2_PACKAGE_PROVIDES_SKELETON="skeleton-init-sysv"
+BR2_PACKAGE_PROVIDES_SKELETON="skeleton-init-systemd"
 BR2_PACKAGE_SKELETON_INIT_COMMON=y
-BR2_PACKAGE_SKELETON_INIT_SYSV=y
+BR2_PACKAGE_SKELETON_INIT_SYSTEMD=y
 
 #
 # Audio and video applications
@@ -560,10 +562,7 @@ BR2_PACKAGE_KODI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MADPLAY is not set
 # BR2_PACKAGE_MIMIC is not set
 # BR2_PACKAGE_MINIMODEM is not set
-
-#
-# miraclecast needs systemd and a glibc toolchain w/ threads and wchar
-#
+# BR2_PACKAGE_MIRACLECAST is not set
 # BR2_PACKAGE_MJPEGTOOLS is not set
 # BR2_PACKAGE_MODPLUGTOOLS is not set
 # BR2_PACKAGE_MOTION is not set
@@ -1036,10 +1035,11 @@ BR2_PACKAGE_DBUS_PYTHON=y
 #
 # edid-decode needs a toolchain w/ C++, gcc >= 4.7
 #
-BR2_PACKAGE_EUDEV=y
-BR2_PACKAGE_PROVIDES_UDEV="eudev"
-# BR2_PACKAGE_EUDEV_RULES_GEN is not set
-BR2_PACKAGE_EUDEV_ENABLE_HWDB=y
+BR2_PACKAGE_PROVIDES_UDEV="systemd"
+
+#
+# eudev needs eudev /dev management
+#
 # BR2_PACKAGE_EVEMU is not set
 # BR2_PACKAGE_EVTEST is not set
 # BR2_PACKAGE_FAN_CTRL is not set
@@ -1626,10 +1626,7 @@ BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_SQLALCHEMY is not set
 # BR2_PACKAGE_PYTHON_SQLITESCHEMA is not set
 # BR2_PACKAGE_PYTHON_SQLPARSE is not set
-
-#
-# python-systemd needs systemd
-#
+# BR2_PACKAGE_PYTHON_SYSTEMD is not set
 # BR2_PACKAGE_PYTHON_TABLEDATA is not set
 # BR2_PACKAGE_PYTHON_TEMPORA is not set
 # BR2_PACKAGE_PYTHON_TERMCOLOR is not set
@@ -2284,7 +2281,7 @@ BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBGSASL is not set
 # BR2_PACKAGE_LIBHTP is not set
 # BR2_PACKAGE_LIBHTTPPARSER is not set
-# BR2_PACKAGE_LIBHTTPSERVER is not set
+BR2_PACKAGE_LIBHTTPSERVER=y
 # BR2_PACKAGE_LIBIDN is not set
 # BR2_PACKAGE_LIBIDN2 is not set
 # BR2_PACKAGE_LIBISCSI is not set
@@ -2293,7 +2290,8 @@ BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBMAXMINDDB is not set
 # BR2_PACKAGE_LIBMBUS is not set
 # BR2_PACKAGE_LIBMEMCACHED is not set
-# BR2_PACKAGE_LIBMICROHTTPD is not set
+BR2_PACKAGE_LIBMICROHTTPD=y
+BR2_PACKAGE_LIBMICROHTTPD_SSL=y
 # BR2_PACKAGE_LIBMINIUPNPC is not set
 # BR2_PACKAGE_LIBMNL is not set
 # BR2_PACKAGE_LIBMODBUS is not set
@@ -2447,7 +2445,8 @@ BR2_PACKAGE_LIBATOMIC_OPS_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBBSD is not set
 # BR2_PACKAGE_LIBBYTESIZE is not set
-# BR2_PACKAGE_LIBCAP is not set
+BR2_PACKAGE_LIBCAP=y
+# BR2_PACKAGE_LIBCAP_TOOLS is not set
 # BR2_PACKAGE_LIBCAP_NG is not set
 # BR2_PACKAGE_LIBCGROUP is not set
 # BR2_PACKAGE_LIBCLC is not set
@@ -2747,8 +2746,7 @@ BR2_PACKAGE_HAPROXY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_IFMETRIC is not set
 # BR2_PACKAGE_IFPLUGD is not set
 # BR2_PACKAGE_IFTOP is not set
-# BR2_PACKAGE_IFUPDOWN is not set
-BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
+BR2_PACKAGE_IFUPDOWN=y
 # BR2_PACKAGE_IGD2_FOR_LINUX is not set
 
 #
@@ -2824,6 +2822,7 @@ BR2_PACKAGE_NETWORK_MANAGER=y
 # BR2_PACKAGE_NETWORK_MANAGER_MODEM_MANAGER is not set
 # BR2_PACKAGE_NETWORK_MANAGER_PPPD is not set
 # BR2_PACKAGE_NETWORK_MANAGER_OVS is not set
+# BR2_PACKAGE_NETWORKD_DISPATCHER is not set
 # BR2_PACKAGE_NFACCT is not set
 # BR2_PACKAGE_NFTABLES is not set
 # BR2_PACKAGE_NGINX is not set
@@ -3152,7 +3151,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 # BR2_PACKAGE_IRQBALANCE is not set
 # BR2_PACKAGE_KEYUTILS is not set
 BR2_PACKAGE_KMOD=y
-# BR2_PACKAGE_KMOD_TOOLS is not set
+BR2_PACKAGE_KMOD_TOOLS=y
 # BR2_PACKAGE_KVMTOOL is not set
 # BR2_PACKAGE_LIBOSTREE is not set
 # BR2_PACKAGE_LXC is not set
@@ -3191,14 +3190,8 @@ BR2_PACKAGE_MAKEDUMPFILE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_S6_RC is not set
 # BR2_PACKAGE_SCRUB is not set
 # BR2_PACKAGE_SCRYPT is not set
-
-#
-# sdbus-c++ needs systemd and a toolchain w/ C++, gcc >= 7
-#
-
-#
-# sdbusplus needs systemd and a toolchain w/ C++, gcc >= 7
-#
+# BR2_PACKAGE_SDBUS_CPP is not set
+# BR2_PACKAGE_SDBUSPLUS is not set
 # BR2_PACKAGE_SEATD is not set
 # BR2_PACKAGE_SMACK is not set
 # BR2_PACKAGE_START_STOP_DAEMON is not set
@@ -3207,7 +3200,44 @@ BR2_PACKAGE_MAKEDUMPFILE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_SYSKLOGD is not set
 BR2_PACKAGE_SYSLOG_NG=y
 BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
+BR2_PACKAGE_SYSTEMD=y
+# BR2_PACKAGE_SYSTEMD_INITRD is not set
+# BR2_PACKAGE_SYSTEMD_KERNELINSTALL is not set
+# BR2_PACKAGE_SYSTEMD_ANALYZE is not set
+# BR2_PACKAGE_SYSTEMD_JOURNAL_REMOTE is not set
+# BR2_PACKAGE_SYSTEMD_BACKLIGHT is not set
+# BR2_PACKAGE_SYSTEMD_BINFMT is not set
+# BR2_PACKAGE_SYSTEMD_COREDUMP is not set
+BR2_PACKAGE_SYSTEMD_PSTORE=y
+# BR2_PACKAGE_SYSTEMD_FIRSTBOOT is not set
+# BR2_PACKAGE_SYSTEMD_HIBERNATE is not set
+# BR2_PACKAGE_SYSTEMD_HOMED is not set
+BR2_PACKAGE_SYSTEMD_HOSTNAMED=y
+BR2_PACKAGE_SYSTEMD_HWDB=y
+# BR2_PACKAGE_SYSTEMD_IMPORTD is not set
+# BR2_PACKAGE_SYSTEMD_CATALOGDB is not set
+# BR2_PACKAGE_SYSTEMD_LOCALED is not set
+# BR2_PACKAGE_SYSTEMD_LOGIND is not set
+# BR2_PACKAGE_SYSTEMD_MACHINED is not set
+BR2_PACKAGE_SYSTEMD_MYHOSTNAME=y
+BR2_PACKAGE_SYSTEMD_NETWORKD=y
+# BR2_PACKAGE_SYSTEMD_OOMD is not set
+# BR2_PACKAGE_SYSTEMD_POLKIT is not set
+# BR2_PACKAGE_SYSTEMD_PORTABLED is not set
+# BR2_PACKAGE_SYSTEMD_QUOTACHECK is not set
+# BR2_PACKAGE_SYSTEMD_RANDOMSEED is not set
+# BR2_PACKAGE_SYSTEMD_REPART is not set
+BR2_PACKAGE_SYSTEMD_RESOLVED=y
+# BR2_PACKAGE_SYSTEMD_RFKILL is not set
+# BR2_PACKAGE_SYSTEMD_SMACK_SUPPORT is not set
+# BR2_PACKAGE_SYSTEMD_SYSEXT is not set
+# BR2_PACKAGE_SYSTEMD_SYSUSERS is not set
+BR2_PACKAGE_SYSTEMD_TIMEDATED=y
+BR2_PACKAGE_SYSTEMD_TIMESYNCD=y
+# BR2_PACKAGE_SYSTEMD_USERDB is not set
+BR2_PACKAGE_SYSTEMD_VCONSOLE=y
 BR2_PACKAGE_SYSTEMD_BOOTCHART_ARCH_SUPPORTS=y
+# BR2_PACKAGE_SYSTEMD_BOOTCHART is not set
 # BR2_PACKAGE_TAR is not set
 # BR2_PACKAGE_TPM_TOOLS is not set
 # BR2_PACKAGE_TPM2_ABRMD is not set
@@ -3222,7 +3252,7 @@ BR2_PACKAGE_UTIL_LINUX_LIBMOUNT=y
 # BR2_PACKAGE_UTIL_LINUX_LIBSMARTCOLS is not set
 BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 # BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
-# BR2_PACKAGE_UTIL_LINUX_AGETTY is not set
+BR2_PACKAGE_UTIL_LINUX_AGETTY=y
 # BR2_PACKAGE_UTIL_LINUX_BFS is not set
 # BR2_PACKAGE_UTIL_LINUX_CAL is not set
 # BR2_PACKAGE_UTIL_LINUX_CHFN_CHSH is not set
@@ -3231,7 +3261,7 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 # BR2_PACKAGE_UTIL_LINUX_EJECT is not set
 # BR2_PACKAGE_UTIL_LINUX_FALLOCATE is not set
 # BR2_PACKAGE_UTIL_LINUX_FDFORMAT is not set
-# BR2_PACKAGE_UTIL_LINUX_FSCK is not set
+BR2_PACKAGE_UTIL_LINUX_FSCK=y
 # BR2_PACKAGE_UTIL_LINUX_HARDLINK is not set
 # BR2_PACKAGE_UTIL_LINUX_HWCLOCK is not set
 # BR2_PACKAGE_UTIL_LINUX_IPCRM is not set
@@ -3247,7 +3277,7 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 # BR2_PACKAGE_UTIL_LINUX_MESG is not set
 # BR2_PACKAGE_UTIL_LINUX_MINIX is not set
 # BR2_PACKAGE_UTIL_LINUX_MORE is not set
-# BR2_PACKAGE_UTIL_LINUX_MOUNT is not set
+BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 # BR2_PACKAGE_UTIL_LINUX_MOUNTPOINT is not set
 # BR2_PACKAGE_UTIL_LINUX_NEWGRP is not set
 # BR2_PACKAGE_UTIL_LINUX_NOLOGIN is not set
@@ -3296,7 +3326,8 @@ BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MC is not set
 # BR2_PACKAGE_MG is not set
 # BR2_PACKAGE_MOST is not set
-# BR2_PACKAGE_NANO is not set
+BR2_PACKAGE_NANO=y
+BR2_PACKAGE_NANO_TINY=y
 # BR2_PACKAGE_UEMACS is not set
 # BR2_PACKAGE_VIM is not set
 
@@ -3451,6 +3482,7 @@ BR2_PACKAGE_PROVIDES_HOST_RUSTC="host-rust-bin"
 # BR2_PACKAGE_HOST_SQUASHFS is not set
 # BR2_PACKAGE_HOST_SUNXI_TOOLS is not set
 # BR2_PACKAGE_HOST_SWIG is not set
+BR2_PACKAGE_HOST_SYSTEMD=y
 # BR2_PACKAGE_HOST_TEGRARCM is not set
 BR2_PACKAGE_HOST_TI_CGT_PRU_ARCH_SUPPORTS=y
 # BR2_PACKAGE_HOST_TI_CGT_PRU is not set
