[emiso] Add possibility to inject ME with a slotID
Signed-off-by: Jean-Pierre Miceli <jean-pierre.miceli@heig-vd.ch>

--- a/linux/usr/emiso_engine/CMakeLists.txt
+++ b/linux/usr/emiso_engine/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(${PROJECT_NAME} emiso_engine.cpp
                                webserver/volume/volume.cpp
                                daemon/image.cpp
                                daemon/container.cpp
-                               cli/cli.cpp
+                               daemon/daemon.cpp
+                               #cli/cli.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE include)
