Create emiso service which starts the engine
Signed-off-by: Jean-Pierre Miceli <jean-pierre.miceli@heig-vd.ch>

--- a/linux/rootfs/board/common/rootfs_overlay/usr/lib/systemd/system/soo_startup.service
+++ b/linux/rootfs/board/common/rootfs_overlay/usr/lib/systemd/system/soo_startup.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=EMISO startup Service
+Description=SOO startup Service
 
 [Service]
 Type=oneshot
-ExecStart=/etc/emiso/startup.sh
+ExecStart=/etc/soo/startup.sh
 
 [Install]
 WantedBy=multi-user.target
