Configuration for syslog-ng to log the ME messages
Signed-off-by: Jean-Pierre Miceli <jean-pierre.miceli@heig-vd.ch>

--- a/linux/rootfs/board/virt64/rootfs_overlay/usr/lib/systemd/system/syslog-ng@.service
+++ b/linux/rootfs/board/virt64/rootfs_overlay/usr/lib/systemd/system/syslog-ng@.service
@@ -1,12 +1,13 @@
 [Unit]
 Description=System Logging Service
-Requires=syslog.socket
 
 [Service]
-ExecStart=/usr/sbin/syslog-ng -n
-StandardOutput=null
+ExecStart=/usr/sbin/syslog-ng -F
+StandardOutput=journal
+StandardError=journal
+Restart=on-failure
 
 [Install]
 Alias=syslog.service
 WantedBy=multi-user.target
-
+Enabled=true
