--- a/linux/rootfs/board/common/rootfs_overlay/etc/syslog-ng.conf
+++ b/linux/rootfs/board/common/rootfs_overlay/etc/syslog-ng.conf
@@ -1,4 +1,4 @@
-@version: 3.24
+@version: 3.34
 
 # syslog configuration for a smart object (SOO)
 
@@ -19,68 +19,26 @@ options {
         log_msg_size(18192);
 };
 
-source s_sys {
+source s_kernel {
 	file("/proc/kmsg" program_override("kernel"));
-	unix-stream ("/dev/log");
-	internal();
 };
 
-source s_uspace {
-	pipe ("/dev/pipe_uspace_logs");
+
+# Define a custom parser
+parser p_me {
+    	regexp-parser(
+		prefix("parsed_")
+		patterns('\[ME:(?<id>\d+)\].*$')
+	);
 };
 
-destination d_all {
-	file("/var/log/messages");
-};
-
-# Provide logs from the soolink subsystem
-destination d_soolink {
-	file("/var/log/soo/soolink");
-};
-
-# Logging of agency (usr) messages
-destination d_agency {
-	file("/var/log/soo/agency");
-};
-
-# Logging of MEs 
+# Logging of MEs
 destination d_me {
-	file("/var/log/soo/me");
-};
-
-filter f_all {
-	not match("\\[soo" value("MESSAGE"));
-};
-	
-filter f_soolink {
-	match("\\[soo:soolink" value("MESSAGE"));
-};
-
-filter f_me {
-	match("\\[soo:me" value("MESSAGE"));
-};
-
-
-#log {
-#       source(s_sys);
-#	filter(f_all);
-#	destination(d_all);
-#};
-
-log {
-	source(s_sys);
-	filter(f_soolink);
-	destination(d_soolink);
+	file("/var/log/soo/me_${parsed_id}.log");
 };
 
 log {
-	source(s_sys);
-	filter(f_me);
+	source(s_kernel);
+	parser(p_me);
 	destination(d_me);
 };
-
-log {
-	source(s_uspace);
-	destination(d_agency);
-};
-
