Retrieve seee driver (untested)

--- a/linux/linux/arch/arm64/boot/dts/soo.dtsi
+++ b/linux/linux/arch/arm64/boot/dts/soo.dtsi
@@ -64,6 +64,11 @@
 				status = "disabled";
 			};
 
+			vvext {
+				compatible = "vvext,backend";
+				status = "disabled";
+			};
+
 		};
 	};
 	
