--- a/linux/usr/module/Makefile
+++ b/linux/usr/module/Makefile
@@ -5,7 +5,8 @@ include $(PWD)/../../build.conf
 KDIR = $(PWD)/../linux
 
 ifeq ($(PLATFORM),$(filter $(PLATFORM),rpi4 rpi4_64))
-obj-m := senseled.o
+obj-m := sensehat.o senseled.o
+sensehat-objs += sensehat_mod.o rpisense.o vvext.o 
 endif
 
 ifeq ($(PLATFORM),$(filter $(PLATFORM),virt32 virt64 cm4_64))
