--- a/ME/soo/so3/so3/soo/drivers/Kconfig
+++ b/ME/soo/so3/so3/soo/drivers/Kconfig
@@ -37,5 +37,8 @@ config VIUOC_FRONTEND
 config VKNX_FRONTEND
     bool "KNX frontend"
 
+config VVEXT_FRONTEND
+    bool "KNX frontend"
+
 endmenu
 
