vext ME build OK (panic at injection)

--- a/ME/soo/so3/so3/soo/drivers/Kconfig
+++ b/ME/soo/so3/so3/soo/drivers/Kconfig
@@ -38,7 +38,7 @@ config VKNX_FRONTEND
     bool "KNX frontend"
 
 config VVEXT_FRONTEND
-    bool "KNX frontend"
+    bool "VVEXT frontend"
 
 endmenu
 
