[logs] Cread emiso ME to example of container with logs
Signed-off-by: Jean-Pierre Miceli <jean-pierre.miceli@heig-vd.ch>

--- a/ME/soo/so3/so3/dts/Makefile
+++ b/ME/soo/so3/so3/dts/Makefile
@@ -25,6 +25,7 @@ dtb-$(CONFIG_SOO_WAGOLED) += wagoled.dtb
 dtb-$(CONFIG_SOO_SWITCH_KNX) += switch_knx.dtb
 dtb-$(CONFIG_SOO_SWITCH_ENOCEAN) += switch_enocean.dtb
 dtb-$(CONFIG_SOO_IUOC) += iuoc.dtb
+dtb-$(CONFIG_SOO_EMISO) += emiso.dtb
 
 endif
 endif
